--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,3 +1,19 @@
----
-
----
+<section class="text-xl text-left max-w-[70ch] text-pretty mx-auto my-24">
+    <img class="w-16 mb-16 mx-auto" src="/logo.png" alt="Logo" />
+    <h1 class="text-4xl font-semibold text-center text-wrap mx-auto mb-10">
+        Bienvenido/as <br> a los premios Esland
+    </h1>
+    <p>
+        El cine tiene los Oscars, la música tiene los Grammy y <strong>el streaming tiene los
+        ESLAND</strong>. Los premios que celebran la creatividad y el talento de los mejores creadores de
+        contenido de <strong>la comunidad hispanohablante.</strong>
+    </p>
+    <p>
+        España, Latinoamérica y Andorra unidas por creadores, creadoras y sus comunidades,
+        para recordar y revivir <strong>algunos de los mejores momentos del año.</strong>
+    </p>
+    <p>
+        Tras dos galas celebradas, una en el Palau de la Música Catalana de Barcelona, y otra
+        en el Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong>la tercera edición en Andorra.</strong>
+    </p>
+</section>
