--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import '@fontsource-variable/onest';
 interface Props {
 	description: String
 	title: string;
@@ -27,8 +28,18 @@ const { description, title } = Astro.props;
 		color-scheme: dark light;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #111e31;
+		font-family: 'Onest Variable',system-ui, sans-serif;
+		background: #151a36;
 	}
-
+	p {
+		color: rgba(255, 255, 255, 0.9);
+		line-height: 1.4;
+		margin-bottom: 1em;
+		font-weight: 100;
+		font-size: 1em;
+		letter-spacing: .5px;
+	}
+	p strong {
+		color: white;
+	}
 </style>
