--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -27,13 +27,12 @@ import BentoItem from "./BentoItem.astro";
         </p>
     </BentoItem>
     <BentoItem class="col-span-10 md:col-span-6" title="LA ALFOMBRA BLANCA" subtitle="16 de febrero de 2024">
-        <div
-                slot="image"
-                class="absolute left-0 top-0 bottom-0 w-full
-                h-full group-hover:scale-110 transition-scale duration-1000
-                ease-in-out opacity-90 bg-blend-luminosity bg-center bg-cover
-                bg-no-repeat bg-blue-950 -z-10"
-                style="background-image: url('/grefgd.png')"
+        <div slot="image"
+             class="absolute left-0 top-0 bottom-0 w-full
+             h-full group-hover:scale-110 transition-scale duration-1000
+             ease-in-out opacity-90 bg-blend-luminosity bg-center bg-cover
+             bg-no-repeat bg-blue-950 -z-10"
+             style="background-image: url('/grefgd.png')"
         />
         <p slot="content" class="max-w-xl">
             Una gala de premios llena de contenido de primer nivel y muchas sorpresas, en la que se
@@ -41,13 +40,12 @@ import BentoItem from "./BentoItem.astro";
         </p>
     </BentoItem>
     <BentoItem class="col-span-10 md:col-span-6" title="LA GALA" subtitle="17 de febrero de 2024">
-        <div
-                slot="image"
-                class="absolute left-0 top-0 bottom-0 w-full
+        <div slot="image"
+             class="absolute left-0 top-0 bottom-0 w-full
                 h-full group-hover:scale-110 transition-scale duration-1000
                 ease-in-out opacity-90 bg-blend-luminosity bg-center bg-cover
                 bg-no-repeat bg-blue-950 -z-10"
-                style="background-image: url('/mountain.png')"
+             style="background-image: url('/mountain.png')"
         />
         <p slot="content" class="max-w-xl">
             Este año, el  momento de la alfombra azul será sustituido y mejorado,
@@ -56,19 +54,19 @@ import BentoItem from "./BentoItem.astro";
         </p>
     </BentoItem>
     <BentoItem class="col-span-10 md:col-span-4" title="DISFRUTA DEL REDDIT DE LA COMINIDAD">
-        <div
-                slot="image"
-                class="absolute left-0 top-0 bottom-0 w-full
+        <div slot="image"
+             class="absolute left-0 top-0 bottom-0 w-full
                 h-full group-hover:scale-110 transition-scale duration-1000
                 ease-in-out opacity-90 bg-blend-luminosity bg-center bg-cover
                 bg-no-repeat bg-blue-950 -z-10"
-                style="background-image: url('/laptop.png')"
-        /><p slot="content" class="max-w-xl">
-        Este año. el reddit no formará parte de las votaciones de los premios, pero sí que formará
-        parte de la comunidad. El subreddit oficial de los premios ESLAND está abierto para ti,
-        para que compartas tus clips, tus opiniones y para que interactúes con toda la comunidad
-        del streaming hispanohablante
-    </p>
+             style="background-image: url('/laptop.png')"
+        />
+        <p slot="content" class="max-w-xl">
+            Este año. el reddit no formará parte de las votaciones de los premios, pero sí que formará
+            parte de la comunidad. El subreddit oficial de los premios ESLAND está abierto para ti,
+            para que compartas tus clips, tus opiniones y para que interactúes con toda la comunidad
+            del streaming hispanohablante
+        </p>
 
     </BentoItem>
 </section>
