--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,4 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Video from '../components/Video.astro';
-import Intro from '../components/Intro.astro';
-import Bento from '../components/Bento.astro';
-import PreFooter from '../components/PreFooter.astro';
-import Footer from '../components/Footer.astro';
+import App from '../components/App.astro';
 ---
-
-<Layout title="Premios ESLAND 2024 -  Celebrando lo mejor de los mpremios esland"
-		description="Descubre a los mejores creadores de contenido de Espeña y Latinoamérica !Vota por tu favorito¡"
->
-	<Video />
-	<main>
-		<Intro />
-		<Bento />
-		<PreFooter />
-	</main>
-	<Footer />
-</Layout>
-
-<style>
-
-</style>
+<App />
